Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/CRM_Detalhe_de_Perfil_da_Conta__c.object-meta.xml
<CustomObject>
    <label>CRM Detalhe Perfil da Conta</label>
    <nameField>
        <label>Nombre de CRM Detalhe de Perfil da Conta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perfil da Conta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>