Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Categoria__c.field-meta.xml
<CustomField>
    <fullName>BR_Categoria__c</fullName>
    <label>AAAA BCategoria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRATA</fullName>
            </value>
            <value>
                <fullName>OURO</fullName>
            </value>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>