Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Categoria_resultante__c.field-meta.xml
<CustomField>
    <fullName>BR_Categoria_resultante__c</fullName>
    <formula>IF( BR_Superou_Meta__c =true, 
    IF( BR_Total_de_pontos__c &lt;20, &apos;PRATA&apos;, IF(BR_Total_de_pontos__c&lt;=35, &apos;OURO&apos;, &apos;PLATINUM&apos;) ) , &apos;PRATA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAAA Categoria de cliente BRMX</label>
    <type>Text</type>
</CustomField>