Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Desconto__c.field-meta.xml
<CustomField>
    <fullName>BR_Desconto__c</fullName>
    <description>Desconto META (kgs) del excel  Tabela - Desconto Royalty BRMX</description>
    <formula>IF(BR_Venda_de_Intacta__c=0, 0, IF(BR_Soma_de_Sem_Comercializada__c/BR_Soma_de_Meta__c&gt;0.85, 0,  CASE(BR_Categoria__c, &apos;OURO&apos;,BR_Venda_de_Intacta__c*1 , &apos;PLATINUM&apos;, BR_Venda_de_Intacta__c*2,0) )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Desconto META (kgs) del excel  Tabela - Desconto Royalty BRMX</inlineHelpText>
    <label>BDesconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>