Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Desconto_Exclusividade__c.field-meta.xml
<CustomField>
    <fullName>BR_Desconto_Exclusividade__c</fullName>
    <description>Desconto Exclusividade (kgs) del excel Fórmula  Desconto de Royalty</description>
    <formula>IF(BR_Exclusividade_GDM__c= false, 0,  IF(BR_Soma_de_Sem_Comercializada__c/BR_Soma_de_Meta__c= 0.85, 0, BR_Venda_de_Intacta__c*0.5) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Desconto Exclusividade (kgs) del excel Fórmula  Desconto de Royalty</inlineHelpText>
    <label>AAAA BDesconto Exclusividade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>