Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Meta_BRMX_porc__c.field-meta.xml
<CustomField>
    <fullName>BR_Meta_BRMX_porc__c</fullName>
    <formula>BR_Soma_de_Sem_Comercializada__c / BR_Soma_de_Meta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAAA Meta % BRMX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>