Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Penetra_o_Tecnologia_IPRO__c.field-meta.xml
<CustomField>
    <fullName>BR_Penetra_o_Tecnologia_IPRO__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Porcentaje</inlineHelpText>
    <label>BPenetração Tecnologia IPRO</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>