Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Pontos_dias_de_campo__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_dias_de_campo__c</fullName>
    <formula>IF( BR_Participacao_dia_campo_realizado__c -  BR_Participacao_dia_de_campo_meta__c  &gt;=0, 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAAA Pontos dias de Campo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>