Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Responsavel__c.field-meta.xml
<CustomField>
    <fullName>BR_Responsavel__c</fullName>
    <description>Supervisor Comercial informante por Brasmax</description>
    <inlineHelpText>Supervisor Comercial informante por Brasmax</inlineHelpText>
    <label>AAAA BResponsável</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>066 - Marcelo Steffen</fullName>
            </value>
            <value>
                <fullName>061 - Fernando Frehner</fullName>
            </value>
            <value>
                <fullName>067 - Sergio Bertagnolli</fullName>
            </value>
            <value>
                <fullName>076 - Tiago Goulart</fullName>
            </value>
            <value>
                <fullName>083 - Jorge Cristiano Rosa</fullName>
            </value>
            <value>
                <fullName>095 - Brasmax</fullName>
            </value>
            <value>
                <fullName>101 - Fausto Tadeu Fanchin</fullName>
            </value>
            <value>
                <fullName>111 - Pablo R. de Souza</fullName>
            </value>
            <value>
                <fullName>150 - João Serrano</fullName>
            </value>
            <value>
                <fullName>151 - Anderson Weissheimer</fullName>
            </value>
            <value>
                <fullName>196 - Edson Chambo</fullName>
            </value>
            <value>
                <fullName>198 - Bernardo Zanardo</fullName>
            </value>
            <value>
                <fullName>199 - Lucas Costa</fullName>
            </value>
            <value>
                <fullName>197 - Wagner Rank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>