Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/BR_Soma_de_Sem_Comercializada__c.field-meta.xml
<CustomField>
    <fullName>BR_Soma_de_Sem_Comercializada__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Suma del campo semilla comercializada para todas variedades (INTACTA) informadas en el anexo III y IV que está con el status aprobado</description>
    <inlineHelpText>Suma del campo semilla comercializada para todas variedades (INTACTA) informadas en el anexo III y IV que está con el status aprobado</inlineHelpText>
    <label>AAAA Vendas BRMX IPRO</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>