Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <formula>CRM_Multiplicador__r.Cuenta__r.Name</formula>
    <label>AAAA Conta</label>
    <type>Text</type>
</CustomField>