Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/CRM_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>CRM_Multiplicador__c</fullName>
    <description>el registro principal de CRM Multiplicador 
determina la Cuenta y la Safra 
o principal Multiplicador registro CRM
determina a conta eo Safra</description>
    <inlineHelpText>el registro principal de CRM Multiplicador 
determina la Cuenta y la Safra 
o principal Multiplicador registro CRM
determina a conta eo Safra</inlineHelpText>
    <label>AAAA CRM Multiplicador</label>
    <referenceTo>CRM_Multiplicador__c</referenceTo>
    <relationshipLabel>Perfil da Conta</relationshipLabel>
    <relationshipName>Perfil_da_Conta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>