Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Areas_para_ensaios__c.field-meta.xml
<CustomField>
    <fullName>DS_Areas_para_ensaios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AAAA Comodato Áreas para ensaios</label>
    <type>Checkbox</type>
</CustomField>