Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Aumento_nas_Vendas__c.field-meta.xml
<CustomField>
    <fullName>DS_Aumento_nas_Vendas__c</fullName>
    <description>True si supero las ventas de semilla comercializada de la campaña anterior</description>
    <formula>IF( SSemComer_Safra_actual__c &gt;  SSemComer_safra_ant__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True si supero las ventas de semilla comercializada de la campaña anterior</inlineHelpText>
    <label>AAAA Aumento as Vendas?</label>
    <type>Checkbox</type>
</CustomField>