Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Categoria__c.field-meta.xml
<CustomField>
    <fullName>DS_Categoria__c</fullName>
    <description>Porcentaje que corresponde según Categoria</description>
    <formula>IF( DS_Superou_Meta__c =true, 
    IF( and(DS_Reclam_de_prec__c&lt;4,DS_Aumento_nas_Vendas__c = true, DS_Participaca_dias_de_campo__c = true,DS_Manual_da_marca__c=true,DS_Areas_para_ensaios__c = true, DS_Identifica_o_de_beiras_de_rodovia__c &gt;=15) , 0.25, 
 IF(and (DS_Reclam_de_prec__c&lt;4,DS_Aumento_nas_Vendas__c=true,DS_Manual_da_marca__c=true, DS_Areas_para_ensaios__c = true) , 0.15, 0) ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Porcentaje que corresponde según Categoria</inlineHelpText>
    <label>AAAA DCategoria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>