Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Categoria_resultante__c.field-meta.xml
<CustomField>
    <fullName>DS_Categoria_resultante__c</fullName>
    <formula>IF(DS_Categoria__c =0.25, &apos;PLATINUM&apos;, IF(DS_Categoria__c =0.15, &apos;OURO&apos;, &apos;PRATA&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAAA Categoria de cliente DSEM</label>
    <type>Text</type>
</CustomField>