Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Manual_da_marca__c.field-meta.xml
<CustomField>
    <fullName>DS_Manual_da_marca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AAAA Manual da marca</label>
    <type>Checkbox</type>
</CustomField>