Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Participaca_dias_de_campo__c.field-meta.xml
<CustomField>
    <fullName>DS_Participaca_dias_de_campo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AAAA Dia de Campo Sem Custo</label>
    <type>Checkbox</type>
</CustomField>