Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/DS_Superou_Meta__c.field-meta.xml
<CustomField>
    <fullName>DS_Superou_Meta__c</fullName>
    <description>Evaluación de : Suma de Semente Comercializada, versus suma de metas, teniendo en cuenta Cultivares de Tecnología Intacta</description>
    <formula>IF( AND(DS_Soma_de_Meta__c  &gt; 0, (DSoma_de_Sem_Comercializada__c/ DS_Soma_de_Meta__c  )&gt;=0.85) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluación de : Suma de Semente Comercializada, versus suma de metas, teniendo en cuenta Cultivares de Tecnología Intacta</inlineHelpText>
    <label>AAAA Superou 85% DSEM</label>
    <type>Checkbox</type>
</CustomField>