Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/Meta_DSEM_porc__c.field-meta.xml
<CustomField>
    <fullName>Meta_DSEM_porc__c</fullName>
    <formula>DSoma_de_Sem_Comercializada__c / DS_Soma_de_Meta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAAA Meta % DSEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>