Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/fields/SSemComer_Safra_actual__c.field-meta.xml
<CustomField>
    <fullName>SSemComer_Safra_actual__c</fullName>
    <description>Suma de semilla comercializada para todas las variedades (Intacta y RR) informadas en el anexo III y IV de las 2 marcas de la safra actual</description>
    <inlineHelpText>Suma de semilla comercializada para todas las variedades (Intacta y RR) informadas en el anexo III y IV de las 2 marcas de la safra actual</inlineHelpText>
    <label>AAAA Vendas Totais Safra atual</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>