Salesforce/main/default/main/default/objects/CRM_Detalhe_de_Perfil_da_Conta__c/recordTypes/BRMX.recordType-meta.xml
<RecordType>
    <fullName>BRMX</fullName>
    <active>true</active>
    <description>Variables utilizadas por Brasmax para la Categorizacion de los Multiplicadores</description>
    <label>BRMX</label>
</RecordType>